api_versioned_docs/version-12.0.0/avalonia/controls/textcolumncreateoptions.mdx
---
title: 'TextColumnCreateOptions'
hide_title: true
slug: '/avalonia/controls/textcolumncreateoptions'
uid: 'Avalonia.Controls.TextColumnCreateOptions'
commentId: 'T:Avalonia.Controls.TextColumnCreateOptions'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.TreeDataGrid'
assembly: 'Avalonia.Controls.TreeDataGrid'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls'
tfms:
  - 'net8.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">TextColumnCreateOptions Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.TreeDataGrid</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.TreeDataGrid</code>
</div>
</div>

<div className="apiref-page__lead">

Holds options for configuring a [Avalonia.Controls.TreeDataGridTextColumn](xref:Avalonia.Controls.TreeDataGridTextColumn) via the fluent API.

</div>

<div className="apiref-page__signature">

```csharp
public class TextColumnCreateOptions
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> <a href="columncreateoptions">ColumnCreateOptions</a> <span className="apiref-page__relation-separator">-&gt;</span> TextColumnCreateOptions
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Derived types:</span> <a href="hierarchicalexpandertextcolumncreateoptions-1">HierarchicalExpanderTextColumnCreateOptions&lt;TModel&gt;</a>
</div>
</div>

## Constructors

| Name | Description |
| --- | --- |
| [TextColumnCreateOptions](#uid-6800c57b13) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-6800c57b13"></span>

### TextColumnCreateOptions Constructor

```csharp
public TextColumnCreateOptions()
```

</section>

## Properties

| Name | Description |
| --- | --- |
| [Culture](#uid-8d964fc4cf) | Culture info used in conjunction with [Avalonia.Controls.TextColumnCreateOptions.StringFormat](xref:Avalonia.Controls.TextColumnCreateOptions.StringFormat) |
| [IsReadOnly](#uid-e110d12073) | Gets or sets whether the column is read-only. |
| [IsTextSearchEnabled](#uid-f10fb2914e) | Gets or sets a value indicating whether the column takes part in text searches. |
| [StringFormat](#uid-3b661f0634) | Gets or sets the format string for the cells in the column. |
| [TextAlignment](#uid-a923371860) | Gets or sets the text alignment mode for the cells in the column. |
| [TextTrimming](#uid-032c3ee539) | Gets or sets the text trimming mode for the cells in the column. |
| [TextWrapping](#uid-44607fef93) | Gets or sets the text wrapping mode for the cells in the column. |
| [UseDrawnCells](#uid-8f20149cfe) | Gets or sets a value indicating whether the column uses drawn cells instead of control-based cells for improved performance. |
| [AllowTriStateSorting](columncreateoptions.mdx#uid-2d3c781356) | Gets or sets whether the user can cycle through ascending, descending, and unsorted states when clicking the column header. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [BeginEditGestures](columncreateoptions.mdx#uid-a7d933d9bd) | Gets or sets the gesture(s) that will cause a cell to enter edit mode. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [CanUserResize](columncreateoptions.mdx#uid-265c20fcbb) | Gets or sets a value indicating whether the user can resize a column by dragging. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [CanUserSort](columncreateoptions.mdx#uid-3860b5729a) | Gets or sets a value indicating whether the user can sort a column by clicking. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [CompareAscending](columncreateoptions.mdx#uid-5685462157) | Gets or sets a custom comparison for ascending ordered columns. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [CompareDescending](columncreateoptions.mdx#uid-49dcda7052) | Gets or sets a custom comparison for descending ordered columns. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [MaxWidth](columncreateoptions.mdx#uid-4554236b2f) | Gets or sets the maximum width for a column. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [MinWidth](columncreateoptions.mdx#uid-1776db3e6c) | Gets or sets the minimum width for a column. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [Width](columncreateoptions.mdx#uid-3cd08b17fd) | Gets or sets the column width. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-8d964fc4cf"></span>

### Culture Property

Culture info used in conjunction with [Avalonia.Controls.TextColumnCreateOptions.StringFormat](xref:Avalonia.Controls.TextColumnCreateOptions.StringFormat)

```csharp
public System.Globalization.CultureInfo Culture { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-e110d12073"></span>

### IsReadOnly Property

Gets or sets whether the column is read-only.

```csharp
public bool IsReadOnly { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-f10fb2914e"></span>

### IsTextSearchEnabled Property

Gets or sets a value indicating whether the column takes part in text searches.

```csharp
public bool IsTextSearchEnabled { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-3b661f0634"></span>

### StringFormat Property

Gets or sets the format string for the cells in the column.

```csharp
public string StringFormat { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-a923371860"></span>

### TextAlignment Property

Gets or sets the text alignment mode for the cells in the column.

```csharp
public Avalonia.Media.TextAlignment TextAlignment { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-032c3ee539"></span>

### TextTrimming Property

Gets or sets the text trimming mode for the cells in the column.

```csharp
public Avalonia.Media.TextTrimming TextTrimming { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-44607fef93"></span>

### TextWrapping Property

Gets or sets the text wrapping mode for the cells in the column.

```csharp
public Avalonia.Media.TextWrapping TextWrapping { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-8f20149cfe"></span>

### UseDrawnCells Property

Gets or sets a value indicating whether the column uses drawn cells instead of
control-based cells for improved performance.

```csharp
public bool UseDrawnCells { get; set; }
```

</section>

</ApiRefPage>

